--- a/.github/workflows/flask-cicd.yml
+++ b/.github/workflows/flask-cicd.yml
@@ -22,5 +22,11 @@ jobs:
                 python -m pip install  --upgrade pip
                 pip install -r requirements.txt
 
-            - name: Test cases
-              run: echo "All the tests passed! Hurray, my python files got downloaded, packages got updated automatically, everytime I do a push on my main branch!!!"
+            - name: Run Flask App
+              run:  |
+                python app.py &
+                sleep 10
+
+
+            - name: Validate my application using curl command
+              run: curl http://127.0.0.1:5000
