--- a/.github/workflows/flask-cicd.yml
+++ b/.github/workflows/flask-cicd.yml
@@ -7,7 +7,7 @@ on:
 
 jobs:
     flask-app-1:
-        runs-on: self-hosted
+        runs-on: ubuntu-latest
 
         steps:
             - uses: actions/checkout@v4
