--- a/.github/workflows/flask-cicd.yml
+++ b/.github/workflows/flask-cicd.yml
@@ -24,7 +24,7 @@ jobs:
 
             - name: Run Flask App
               run:  |
-                python app.py
+                python app.py &
                 sleep 10
 
 
