--- a/.github/workflows/flask-cicd.yml
+++ b/.github/workflows/flask-cicd.yml
@@ -22,5 +22,5 @@ jobs:
                 python app.py &
                 sleep 10
 
-            - name: Validate the application using curl command
+            - name: Validate my application using curl command
               run: curl http://127.0.0.1:5000
