--- a/.github/workflows/ec2-cicd.yaml
+++ b/.github/workflows/ec2-cicd.yaml
@@ -30,3 +30,9 @@ jobs:
       - name: Start Flask application
         run: |
           nohup gunicorn -w 4 -b 0.0.0.0:5000 app:app > app.log 2>&1 &
+
+      - name: Validate Deployment
+        run: |
+          sleep 5  # Wait for the app to start
+          curl http://localhost:5000
+
