--- a/.github/workflows/ec2-cicd.yaml
+++ b/.github/workflows/ec2-cicd.yaml
@@ -3,7 +3,7 @@ name: Deploy Flask App on EC2
 on:
   push:
     branches:
-      - main  # Change this if using a different branch
+      - mains  # Change this if using a different branch
 
 jobs:
   deploy:
