--- a/.github/workflows/ec2.yaml
+++ b/.github/workflows/ec2.yaml
@@ -25,8 +25,8 @@ jobs:
 
       - name: Restart Flask Service
         run: |
-          sudo systemctl restart flask-app
-          sudo systemctl enable flask-app  # Ensures app starts on reboot
+          sudo systemctl restart flask-application
+          sudo systemctl enable flask-application  # Ensures app starts on reboot
 
       - name: Validate Deployment
         run: |
